fix(Consumer Survey): Layout issues

--- a/src/public/css/main_en.css
+++ b/src/public/css/main_en.css
@@ -11363,3 +11363,7 @@ label[for=searchInputnoCT]::after {
 .achivementFormPreview {
   height: calc(100% - 66px);
 }
+.consumersSurveyTableWrap .forPosition{
+  position: fixed;
+  top: initial;
+}
